Fixed scrollbar hell (hopefully)

--- a/style/custom.scss
+++ b/style/custom.scss
@@ -16,7 +16,7 @@
     }
 }
 
-.root-container, .text-view, .text-view-inner, .text-view-text {
+.text-view {
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
